rollouts/bluegreen/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-bluegreen-demo
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollouts-bluegreen-demo
  template:
    metadata:
      labels:
        app: rollouts-bluegreen-demo
    spec:
      containers:
      - name: rollouts-bluegreen-demo
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    blueGreen: 
      activeService: rollouts-bluegreen-demo
      previewService: rollouts-bluegreen-demo-preview
      autoPromotionEnabled: false
