rollouts/bluegreen/ingressroutes.yaml
# IngressRoutes for BlueGreen Rollout
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rollouts-bluegreen-demo-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`rollouts-bluegreen-demo.local`)
    kind: Rule
    services:
    - name: rollouts-bluegreen-demo
      port: 80
      namespace: argocd-rollouts
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rollouts-bluegreen-demo-preview-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`rollouts-bluegreen-demo-preview.local`)
    kind: Rule
    services:
    - name: rollouts-bluegreen-demo-preview
      port: 80
      namespace: argocd-rollouts
